server/antlr4-tsplang/TspParser.js
// Generated from ./Tsp.g4 by ANTLR 4.7.1
// jshint ignore: start
var antlr4 = require('antlr4/index');
var TspListener = require('./TspListener').TspListener;
var grammarFileName = "Tsp.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "';'", "'='", "'do'", "'end'", "'while'", "'repeat'", 
                     "'until'", "'if'", "'then'", "'elseif'", "'else'", 
                     "'break'", "'for'", "','", "'in'", "'function'", "'return'", 
                     "'.'", "':'", "'('", "')'", "'['", "']'", "'{'", "'}'", 
                     "'or'", "'and'", "'<'", "'>'", "'<='", "'>='", "'~='", 
                     "'!='", "'=='", "'..'", "'+'", "'-'", "'*'", "'/'", 
                     "'&'", "'|'", "'^^'", "'<<'", "'>>'", "'not'", "'!'", 
                     "'^'", "'nil'", null, "'local'", "'...'" ];

var symbolicNames = [ null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, "NIL", "BOOLEAN", "LOCAL", "VARARG", 
                      "NAME", "NORMALSTRING", "CHARSTRING", "LONGSTRING", 
                      "INT", "HEX", "FLOAT", "LONGCOMMENT", "LINE_COMMENT", 
                      "WS", "SHEBANG" ];

var ruleNames =  [ "chunk", "block", "statement", "returnStatement", "functionName", 
                   "variableList", "nameList", "expressionList", "value", 
                   "expression", "prefix", "suffix", "objectCall", "index", 
                   "variable", "functionCall", "args", "functionDefinition", 
                   "functionBody", "parameterList", "tableConstructor", 
                   "fieldList", "field", "fieldSeparator", "operatorOr", 
                   "operatorAnd", "operatorComparison", "operatorStrcat", 
                   "operatorAddSub", "operatorMulDiv", "operatorBitwiseAnd", 
                   "operatorBitwiseOr", "operatorBitwiseXor", "operatorBitwiseShift", 
                   "operatorUnary", "operatorPower", "number", "string" ];

function TspParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

TspParser.prototype = Object.create(antlr4.Parser.prototype);
TspParser.prototype.constructor = TspParser;

Object.defineProperty(TspParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

TspParser.EOF = antlr4.Token.EOF;
TspParser.T__0 = 1;
TspParser.T__1 = 2;
TspParser.T__2 = 3;
TspParser.T__3 = 4;
TspParser.T__4 = 5;
TspParser.T__5 = 6;
TspParser.T__6 = 7;
TspParser.T__7 = 8;
TspParser.T__8 = 9;
TspParser.T__9 = 10;
TspParser.T__10 = 11;
TspParser.T__11 = 12;
TspParser.T__12 = 13;
TspParser.T__13 = 14;
TspParser.T__14 = 15;
TspParser.T__15 = 16;
TspParser.T__16 = 17;
TspParser.T__17 = 18;
TspParser.T__18 = 19;
TspParser.T__19 = 20;
TspParser.T__20 = 21;
TspParser.T__21 = 22;
TspParser.T__22 = 23;
TspParser.T__23 = 24;
TspParser.T__24 = 25;
TspParser.T__25 = 26;
TspParser.T__26 = 27;
TspParser.T__27 = 28;
TspParser.T__28 = 29;
TspParser.T__29 = 30;
TspParser.T__30 = 31;
TspParser.T__31 = 32;
TspParser.T__32 = 33;
TspParser.T__33 = 34;
TspParser.T__34 = 35;
TspParser.T__35 = 36;
TspParser.T__36 = 37;
TspParser.T__37 = 38;
TspParser.T__38 = 39;
TspParser.T__39 = 40;
TspParser.T__40 = 41;
TspParser.T__41 = 42;
TspParser.T__42 = 43;
TspParser.T__43 = 44;
TspParser.T__44 = 45;
TspParser.T__45 = 46;
TspParser.T__46 = 47;
TspParser.NIL = 48;
TspParser.BOOLEAN = 49;
TspParser.LOCAL = 50;
TspParser.VARARG = 51;
TspParser.NAME = 52;
TspParser.NORMALSTRING = 53;
TspParser.CHARSTRING = 54;
TspParser.LONGSTRING = 55;
TspParser.INT = 56;
TspParser.HEX = 57;
TspParser.FLOAT = 58;
TspParser.LONGCOMMENT = 59;
TspParser.LINE_COMMENT = 60;
TspParser.WS = 61;
TspParser.SHEBANG = 62;

TspParser.RULE_chunk = 0;
TspParser.RULE_block = 1;
TspParser.RULE_statement = 2;
TspParser.RULE_returnStatement = 3;
TspParser.RULE_functionName = 4;
TspParser.RULE_variableList = 5;
TspParser.RULE_nameList = 6;
TspParser.RULE_expressionList = 7;
TspParser.RULE_value = 8;
TspParser.RULE_expression = 9;
TspParser.RULE_prefix = 10;
TspParser.RULE_suffix = 11;
TspParser.RULE_objectCall = 12;
TspParser.RULE_index = 13;
TspParser.RULE_variable = 14;
TspParser.RULE_functionCall = 15;
TspParser.RULE_args = 16;
TspParser.RULE_functionDefinition = 17;
TspParser.RULE_functionBody = 18;
TspParser.RULE_parameterList = 19;
TspParser.RULE_tableConstructor = 20;
TspParser.RULE_fieldList = 21;
TspParser.RULE_field = 22;
TspParser.RULE_fieldSeparator = 23;
TspParser.RULE_operatorOr = 24;
TspParser.RULE_operatorAnd = 25;
TspParser.RULE_operatorComparison = 26;
TspParser.RULE_operatorStrcat = 27;
TspParser.RULE_operatorAddSub = 28;
TspParser.RULE_operatorMulDiv = 29;
TspParser.RULE_operatorBitwiseAnd = 30;
TspParser.RULE_operatorBitwiseOr = 31;
TspParser.RULE_operatorBitwiseXor = 32;
TspParser.RULE_operatorBitwiseShift = 33;
TspParser.RULE_operatorUnary = 34;
TspParser.RULE_operatorPower = 35;
TspParser.RULE_number = 36;
TspParser.RULE_string = 37;

function ChunkContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = TspParser.RULE_chunk;
    return this;
}

ChunkContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ChunkContext.prototype.constructor = ChunkContext;

ChunkContext.prototype.block = function() {
    return this.getTypedRuleContext(BlockContext,0);
};

ChunkContext.prototype.EOF = function() {
    return this.getToken(TspParser.EOF, 0);
};

ChunkContext.prototype.enterRule = function(listener) {
    if(listener instanceof TspListener ) {
        listener.enterChunk(this);
	}
};

ChunkContext.prototype.exitRule = function(listener) {
    if(listener instanceof TspListener ) {
        listener.exitChunk(this);
	}
};




TspParser.ChunkContext = ChunkContext;

TspParser.prototype.chunk = function() {

    var localctx = new ChunkContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, TspParser.RULE_chunk);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 76;
        this.block();
        this.state = 77;
        this.match(TspParser.EOF);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function BlockContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = TspParser.RULE_block;
    return this;
}

BlockContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
BlockContext.prototype.constructor = BlockContext;

BlockContext.prototype.statement = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(StatementContext);
    } else {
        return this.getTypedRuleContext(StatementContext,i);
    }
};

BlockContext.prototype.enterRule = function(listener) {
    if(listener instanceof TspListener ) {
        listener.enterBlock(this);
	}
};

BlockContext.prototype.exitRule = function(listener) {
    if(listener instanceof TspListener ) {
        listener.exitBlock(this);
	}
};




TspParser.BlockContext = BlockContext;

TspParser.prototype.block = function() {

    var localctx = new BlockContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, TspParser.RULE_block);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 85;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << TspParser.T__2) | (1 << TspParser.T__4) | (1 << TspParser.T__5) | (1 << TspParser.T__7) | (1 << TspParser.T__11) | (1 << TspParser.T__12) | (1 << TspParser.T__15) | (1 << TspParser.T__16) | (1 << TspParser.T__19))) !== 0) || _la===TspParser.LOCAL || _la===TspParser.NAME) {
            this.state = 79;
            this.statement();
            this.state = 81;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            if(_la===TspParser.T__0) {
                this.state = 80;
                this.match(TspParser.T__0);
            }

            this.state = 87;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function StatementContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = TspParser.RULE_statement;
    return this;
}

StatementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
StatementContext.prototype.constructor = StatementContext;

StatementContext.prototype.variableList = function() {
    return this.getTypedRuleContext(VariableListContext,0);
};

StatementContext.prototype.expressionList = function() {
    return this.getTypedRuleContext(ExpressionListContext,0);
};

StatementContext.prototype.functionCall = function() {
    return this.getTypedRuleContext(FunctionCallContext,0);
};

StatementContext.prototype.block = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(BlockContext);
    } else {
        return this.getTypedRuleContext(BlockContext,i);
    }
};

StatementContext.prototype.expression = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ExpressionContext);
    } else {
        return this.getTypedRuleContext(ExpressionContext,i);
    }
};

StatementContext.prototype.returnStatement = function() {
    return this.getTypedRuleContext(ReturnStatementContext,0);
};

StatementContext.prototype.NAME = function() {
    return this.getToken(TspParser.NAME, 0);
};

StatementContext.prototype.nameList = function() {
    return this.getTypedRuleContext(NameListContext,0);
};

StatementContext.prototype.functionName = function() {
    return this.getTypedRuleContext(FunctionNameContext,0);
};

StatementContext.prototype.functionBody = function() {
    return this.getTypedRuleContext(FunctionBodyContext,0);
};

StatementContext.prototype.LOCAL = function() {
    return this.getToken(TspParser.LOCAL, 0);
};

StatementContext.prototype.enterRule = function(listener) {
    if(listener instanceof TspListener ) {
        listener.enterStatement(this);
	}
};

StatementContext.prototype.exitRule = function(listener) {
    if(listener instanceof TspListener ) {
        listener.exitStatement(this);
	}
};




TspParser.StatementContext = StatementContext;

TspParser.prototype.statement = function() {

    var localctx = new StatementContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, TspParser.RULE_statement);
    var _la = 0; // Token type
    try {
        this.state = 166;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,6,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 88;
            this.variableList();
            this.state = 89;
            this.match(TspParser.T__1);
            this.state = 90;
            this.expressionList();
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 92;
            this.functionCall();
            break;

        case 3:
            this.enterOuterAlt(localctx, 3);
            this.state = 93;
            this.match(TspParser.T__2);
            this.state = 94;
            this.block();
            this.state = 95;
            this.match(TspParser.T__3);
            break;

        case 4:
            this.enterOuterAlt(localctx, 4);
            this.state = 97;
            this.match(TspParser.T__4);
            this.state = 98;
            this.expression();
            this.state = 99;
            this.match(TspParser.T__2);
            this.state = 100;
            this.block();
            this.state = 101;
            this.match(TspParser.T__3);
            break;

        case 5:
            this.enterOuterAlt(localctx, 5);
            this.state = 103;
            this.match(TspParser.T__5);
            this.state = 104;
            this.block();
            this.state = 105;
            this.match(TspParser.T__6);
            this.state = 106;
            this.expression();
            break;

        case 6:
            this.enterOuterAlt(localctx, 6);
            this.state = 108;
            this.match(TspParser.T__7);
            this.state = 109;
            this.expression();
            this.state = 110;
            this.match(TspParser.T__8);
            this.state = 111;
            this.block();
            this.state = 119;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while(_la===TspParser.T__9) {
                this.state = 112;
                this.match(TspParser.T__9);
                this.state = 113;
                this.expression();
                this.state = 114;
                this.match(TspParser.T__8);
                this.state = 115;
                this.block();
                this.state = 121;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            this.state = 124;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            if(_la===TspParser.T__10) {
                this.state = 122;
                this.match(TspParser.T__10);
                this.state = 123;
                this.block();
            }

            this.state = 126;
            this.match(TspParser.T__3);
            break;

        case 7:
            this.enterOuterAlt(localctx, 7);
            this.state = 128;
            this.returnStatement();
            break;

        case 8:
            this.enterOuterAlt(localctx, 8);
            this.state = 129;
            this.match(TspParser.T__11);
            break;

        case 9:
            this.enterOuterAlt(localctx, 9);
            this.state = 130;
            this.match(TspParser.T__12);
            this.state = 131;
            this.match(TspParser.NAME);
            this.state = 132;
            this.match(TspParser.T__1);
            this.state = 133;
            this.expression();
            this.state = 134;
            this.match(TspParser.T__13);
            this.state = 135;
            this.expression();
            this.state = 138;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            if(_la===TspParser.T__13) {
                this.state = 136;
                this.match(TspParser.T__13);
                this.state = 137;
                this.expression();
            }

            this.state = 140;
            this.match(TspParser.T__2);
            this.state = 141;
            this.block();
            this.state = 142;
            this.match(TspParser.T__3);
            break;

        case 10:
            this.enterOuterAlt(localctx, 10);
            this.state = 144;
            this.match(TspParser.T__12);
            this.state = 145;
            this.nameList();
            this.state = 146;
            this.match(TspParser.T__14);
            this.state = 147;
            this.expressionList();
            this.state = 148;
            this.match(TspParser.T__2);
            this.state = 149;
            this.block();
            this.state = 150;
            this.match(TspParser.T__3);
            break;

        case 11:
            this.enterOuterAlt(localctx, 11);
            this.state = 152;
            this.match(TspParser.T__15);
            this.state = 153;
            this.functionName();
            this.state = 154;
            this.functionBody();
            break;

        case 12:
            this.enterOuterAlt(localctx, 12);
            this.state = 156;
            this.match(TspParser.LOCAL);
            this.state = 157;
            this.match(TspParser.T__15);
            this.state = 158;
            this.match(TspParser.NAME);
            this.state = 159;
            this.functionBody();
            break;

        case 13:
            this.enterOuterAlt(localctx, 13);
            this.state = 160;
            this.match(TspParser.LOCAL);
            this.state = 161;
            this.nameList();
            this.state = 164;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            if(_la===TspParser.T__1) {
                this.state = 162;
                this.match(TspParser.T__1);
                this.state = 163;
                this.expressionList();
            }

            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ReturnStatementContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = TspParser.RULE_returnStatement;
    return this;
}

ReturnStatementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ReturnStatementContext.prototype.constructor = ReturnStatementContext;

ReturnStatementContext.prototype.expressionList = function() {
    return this.getTypedRuleContext(ExpressionListContext,0);
};

ReturnStatementContext.prototype.enterRule = function(listener) {
    if(listener instanceof TspListener ) {
        listener.enterReturnStatement(this);
	}
};

ReturnStatementContext.prototype.exitRule = function(listener) {
    if(listener instanceof TspListener ) {
        listener.exitReturnStatement(this);
	}
};




TspParser.ReturnStatementContext = ReturnStatementContext;

TspParser.prototype.returnStatement = function() {

    var localctx = new ReturnStatementContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, TspParser.RULE_returnStatement);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 168;
        this.match(TspParser.T__16);
        this.state = 170;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,7,this._ctx);
        if(la_===1) {
            this.state = 169;
            this.expressionList();

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function FunctionNameContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = TspParser.RULE_functionName;
    return this;
}

FunctionNameContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
FunctionNameContext.prototype.constructor = FunctionNameContext;

FunctionNameContext.prototype.NAME = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(TspParser.NAME);
    } else {
        return this.getToken(TspParser.NAME, i);
    }
};


FunctionNameContext.prototype.enterRule = function(listener) {
    if(listener instanceof TspListener ) {
        listener.enterFunctionName(this);
	}
};

FunctionNameContext.prototype.exitRule = function(listener) {
    if(listener instanceof TspListener ) {
        listener.exitFunctionName(this);
	}
};




TspParser.FunctionNameContext = FunctionNameContext;

TspParser.prototype.functionName = function() {

    var localctx = new FunctionNameContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, TspParser.RULE_functionName);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 172;
        this.match(TspParser.NAME);
        this.state = 177;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===TspParser.T__17) {
            this.state = 173;
            this.match(TspParser.T__17);
            this.state = 174;
            this.match(TspParser.NAME);
            this.state = 179;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 182;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===TspParser.T__18) {
            this.state = 180;
            this.match(TspParser.T__18);
            this.state = 181;
            this.match(TspParser.NAME);
        }

    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function VariableListContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = TspParser.RULE_variableList;
    return this;
}

VariableListContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
VariableListContext.prototype.constructor = VariableListContext;

VariableListContext.prototype.variable = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(VariableContext);
    } else {
        return this.getTypedRuleContext(VariableContext,i);
    }
};

VariableListContext.prototype.enterRule = function(listener) {
    if(listener instanceof TspListener ) {
        listener.enterVariableList(this);
	}
};

VariableListContext.prototype.exitRule = function(listener) {
    if(listener instanceof TspListener ) {
        listener.exitVariableList(this);
	}
};




TspParser.VariableListContext = VariableListContext;

TspParser.prototype.variableList = function() {

    var localctx = new VariableListContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, TspParser.RULE_variableList);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 184;
        this.variable();
        this.state = 189;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===TspParser.T__13) {
            this.state = 185;
            this.match(TspParser.T__13);
            this.state = 186;
            this.variable();
            this.state = 191;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function NameListContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = TspParser.RULE_nameList;
    return this;
}

NameListContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
NameListContext.prototype.constructor = NameListContext;

NameListContext.prototype.NAME = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(TspParser.NAME);
    } else {
        return this.getToken(TspParser.NAME, i);
    }
};


NameListContext.prototype.enterRule = function(listener) {
    if(listener instanceof TspListener ) {
        listener.enterNameList(this);
	}
};

NameListContext.prototype.exitRule = function(listener) {
    if(listener instanceof TspListener ) {
        listener.exitNameList(this);
	}
};




TspParser.NameListContext = NameListContext;

TspParser.prototype.nameList = function() {

    var localctx = new NameListContext(this, this._ctx, this.state);
    this.enterRule(localctx, 12, TspParser.RULE_nameList);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 192;
        this.match(TspParser.NAME);
        this.state = 197;
        this._errHandler.sync(this);
        var _alt = this._interp.adaptivePredict(this._input,11,this._ctx)
        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
            if(_alt===1) {
                this.state = 193;
                this.match(TspParser.T__13);
                this.state = 194;
                this.match(TspParser.NAME); 
            }
            this.state = 199;
            this._errHandler.sync(this);
            _alt = this._interp.adaptivePredict(this._input,11,this._ctx);
        }

    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ExpressionListContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = TspParser.RULE_expressionList;
    return this;
}

ExpressionListContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ExpressionListContext.prototype.constructor = ExpressionListContext;

ExpressionListContext.prototype.expression = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ExpressionContext);
    } else {
        return this.getTypedRuleContext(ExpressionContext,i);
    }
};

ExpressionListContext.prototype.enterRule = function(listener) {
    if(listener instanceof TspListener ) {
        listener.enterExpressionList(this);
	}
};

ExpressionListContext.prototype.exitRule = function(listener) {
    if(listener instanceof TspListener ) {
        listener.exitExpressionList(this);
	}
};




TspParser.ExpressionListContext = ExpressionListContext;

TspParser.prototype.expressionList = function() {
